# nexcore-downloads-scanner

./: Cargo.toml  README.md
src/: lib.rs  main.rs
